Agregando la funcionalidad de generar reporte de la tabla en la vista clientes

--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="{% static '/css/simple-sidebar.css' %}">
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
     
+    <!-- HACEMOS REFERENCIA AL ARCHIVO QUE CONTIENE EL SCRIPT PARA EL HIDE Y SHOW Y GENERAR PDF -->
     <script src="{% static '/js/functions_table.js' %}"></script>
-    <!-- HACEMOS REFERENCIA AL SCRIPT PARA EL HIDE Y SHOW -->
 
     <link rel="icon" type="image/svg" href="/static/assets/icons/Path_406.svg"/>
     
@@ -305,6 +305,13 @@
 
 <!-- extension responsive -->
 <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+
+    <!-- El script de la librería para generar el pdf-->
+
+    {% load static %}
+    <script src="{% static '/js/html2pdf.bundle.min.js' %}"></script>
+    <script src="{% static '/js/scriptpdf.js' %}"></script>
+    
 
 <!-- Menu Toggle Script -->
 <script>
