--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -86,7 +86,7 @@
                 </thead>
                 <tbody>
 
-                    {% for insumo in insumos  %}
+                    {% for insumo in insumos reversed %}
 
                     <tr class="small"> 
                         <td  id="select{{insumo.id}}">{{insumo.categoria}}</td>
