--- a/templatedjango/apptemplate/static/css/style.css
+++ b/templatedjango/apptemplate/static/css/style.css
@@ -25,3 +25,42 @@ th{
 #editar_icono{
     color: white;
 }
+
+
+/* CLIENTES */
+.ahora{
+    display: flex;
+}
+#imgicon{
+    margin-right: 10px;
+}
+h1{
+    color: #a6a8b5;
+}
+h5{
+    color: #a6a8b5;
+}
+#calle{
+    color: #a6a8b5;
+    /* font-weight: bold; */
+    /* font-size: large; */
+
+}
+#tituloMembrete{
+    color: #a6a8b5;
+    font-weight: bold;
+    font-size: large;
+}
+#telefonoMembrete{
+    color: #a6a8b5;
+}
+.agua {
+    background-color: #e9ecef;
+}
+#membreteContenedor{
+    display: none;
+}  
+
+.ocultar{
+    padding-bottom: 20px;
+}
