Limpiando estilos css y arreglando parte estestica de todas las vistas exeptuando produccion y su listado

--- a/templatedjango/apptemplate/templates/clientes/clientes.html
+++ b/templatedjango/apptemplate/templates/clientes/clientes.html
@@ -18,7 +18,7 @@
 
                 <div class="card-body">
 
-                    <h5 class="card-title">Registar Cliente!</h5>
+                    <h5 class="card-title">¡Registar Cliente!</h5>
 
                     <form action="clientes" method="post" id="id_form_modal">
 
@@ -51,6 +51,7 @@
                         
 
                         <button type="submit" class="btn btn-outline-success float-right" id="enviar">Guardar</button>
+                        <button style="margin-right: 10px;" type="reset" class="btn btn-outline-secondary float-right" value="Limpiar">Limpiar</button>
 
                         
                         <script>
@@ -175,7 +176,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Confirmacion</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -185,7 +186,7 @@
                                         <div class="modal-body">
                                             <input type="hidden" name="id_borrar" value="{{mostrar.id}}">
                                             <input type="hidden" name="borrar" value="borrar">
-                                            Desea Eliminar este Registro?
+                                            ¿Desea Eliminar este Registro?
                                         </div>
                                         <div class="modal-footer">
 
