--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -16,7 +16,7 @@
 
                 <div class="card-body">
 
-                    <h5 class="card-title">Insumos!</h5>
+                    <h5 class="card-title">¡Insumos!</h5>
 
                     <form action="insumos" method="post">
 
@@ -87,7 +87,7 @@
 
             <table id="example" class="tablita table  table-hover table-bordered  display nowrap" cellspacing="0" width="100%">
                 <thead>
-                    <tr style="color: #A3A6B4;">
+                    <tr>
                         <th>Categoría</th>
                         <th>Insumo</th>
                         <th>Cantidad</th>
@@ -234,7 +234,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Confirmacion</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -244,7 +244,7 @@
                                         <div class="modal-body">
                                             <input type="hidden" name="id_borrar" value="{{insumo.id}}">
                                             <input type="hidden" name="borrar" value="borrar">
-                                            Desea Eliminar este Registro ?
+                                            ¿Desea Eliminar este Registro?
                                         </div>
                                         <div class="modal-footer">
 
@@ -263,7 +263,7 @@
 
                 </tbody>
                 <tfoot>
-                    <tr style="color: #A3A6B4;">
+                    <tr>
                         <th>Categoría</th>
                         <th>Insumo</th>
                         <th>Cantidad</th>
