--- a/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
@@ -208,9 +208,9 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th style="color: #A3A6B4;">Fecha</th>
-                        <th style="color: #A3A6B4;">Estado</th>
-                        <th style="color: #A3A6B4;">Acciones</th>
+                        <th>Fecha</th>
+                        <th>Estado</th>
+                        <th>Acciones</th>
                     </tr>
                 </tfoot>
             </table>
