--- a/templatedjango/apptemplate/templates/ventas/ventas.html
+++ b/templatedjango/apptemplate/templates/ventas/ventas.html
@@ -16,7 +16,7 @@
 
         <table id="example" class="tablita table  table-hover table-bordered  display nowrap" width="100%">
             <thead>
-                <tr style="color: #A3A6B4;">
+                <tr>
                     <th>Fecha</th>
                     <th>Monto Total</th>
                     <th>Ver mas</th>
@@ -207,9 +207,9 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <th style="color: #A3A6B4;">Fecha</th>
-                    <th style="color: #A3A6B4;">Monto Total</th>
-                    <th style="color: #A3A6B4;">Ver mas</th>
+                    <th>Fecha</th>
+                    <th>Monto Total</th>
+                    <th>Ver mas</th>
                 </tr>
             </tfoot>
         </table>
