--- a/templatedjango/apptemplate/static/css/style.css
+++ b/templatedjango/apptemplate/static/css/style.css
@@ -17,13 +17,20 @@ thead {
 }
 
 th{
-    color: #A3A6B4;
+    color: #007bff;
 }
-
+td{
+    color: #b1b1b1;
+    font-weight: bold;
+}
 /* icono para editar */
 
 #editar_icono{
     color: white;
+}
+
+tfoot{
+    background-color: #F5F6FA;
 }
 
 
@@ -38,7 +45,7 @@ h1{
     color: #a6a8b5;
 }
 h5{
-    color: #a6a8b5;
+    color: #007bff;
 }
 #calle{
     color: #a6a8b5;
@@ -67,4 +74,35 @@ h5{
 
 .ocultar{
     margin-top: 20px;
+}
+
+.modal-body{
+    color: #a6a8b5;
+    font-weight: bold;
+}
+
+
+/* LISTADO PRODUCTOS */
+
+.padre{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hijo{
+    width: 100%;
+    height: 100%;
+}
+
+.imagen{
+    width: fit-content;
+    height: 250px;
+    min-height: 300px;
+    max-height: auto;
+    float: left;
+    margin: 3px;
+    padding: 3px;
+    object-fit: cover;
+
+    /* padding: 0 -21%; */
 }
