--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -27,6 +27,7 @@
     href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
     
     <!-- Bootstrap core CSS -->
+   
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     {% load static %}
     <!-- Custom styles for this template -->
@@ -35,6 +36,8 @@
     
     <!-- HACEMOS REFERENCIA AL ARCHIVO QUE CONTIENE EL SCRIPT PARA EL HIDE Y SHOW Y GENERAR PDF -->
     <script src="{% static '/js/functions_table.js' %}"></script>
+
+    <!-- ICONO DEL SISTEMA -->
 
     <link rel="icon" type="image/svg" href="/static/assets/icons/Path_406.svg"/>
     
@@ -267,31 +270,19 @@
   <!-- /#wrapper -->
   
   
-  
-  
 <!-- data live search -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> <!-- Importante -->
-<script type="text/javascript"
-src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <!-- Le da la funcionalidad-->
-<script type="text/javascript"
-src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-    
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>   
 <!-- ----------------- -->
-    
-    
-    
     
 <!-- HASTA ACA -->
     
 <!-- Bootstrap core JavaScript -->
-    
-    
+  
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <!-- comentamos estas lineas para que funcione el data live search -->
 
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
@@ -315,23 +306,10 @@ src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap
 <!-- Menu Toggle Script -->
 
 <!-- DATA TABLE SCRIPT -->
-
-{% load static %}
 <script src="{% static '/js/dataTable.js' %}"></script>
 
-
 <!-- HACEMOS REFERENCIA AL SCRIPT PARA EL HIDE Y SHOW -->
-{% load static %}
 <script src="{% static '/js/functions.js' %}"></script>
-
-
-<script>
-  // Add the following code if you want the name of the file appear on select
-  $(".custom-file-input").on("change", function() {
-    var fileName = $(this).val().split("\\").pop();
-    $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-  });
-  </script>
 
 </body>
 
