--- a/templatedjango/apptemplate/templates/compras/listado_compras.html
+++ b/templatedjango/apptemplate/templates/compras/listado_compras.html
@@ -56,7 +56,7 @@
                                     <div class="modal-content" id="contenidoImprimir{{compra.id}}" >
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLongTitle">Detalles de la Compra</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <button type="button" class="close ocultar2" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
