--- a/templatedjango/apptemplate/templates/productos/listado_productos.html
+++ b/templatedjango/apptemplate/templates/productos/listado_productos.html
@@ -50,38 +50,16 @@
       <img class="card-img-top img-thumbnail imagen rounded mx-auto d-block" src="{{mostrar.imagen.url}}"
         alt="Card image cap">
 
-      <style>
-        /* .card-img-top {
-          width: 250px%;
-          height: 20vw;
-          object-fit: cover;
-        } */
-
-        /* .cont-imagen {
-          width: fit-content;
-          max-height: 100%;
-
-        } */
-
-        .imagen {
-          width: fit-content;
-          height: 250px;
-          min-height: 300px;
-          max-height: auto;
-          float: left;
-          margin: 3px;
-          padding: 3px;
-          object-fit: cover;
-
-          /* padding: 0 -21%; */
-        }
-      </style>
+      <div class="form-control"style="border: none;"> 
+        <h5 class="form-group">{{mostrar.id_nombre_producto.nombre_productos}}</h5>
+      </div>
 
       <div class="card-body">
+
         <div class="row">
-          <div class="form-group col-xl-12 card-title">
+          <!-- <div class="form-group col-xl-12 card-title">
             <h4>{{mostrar.id_nombre_producto.nombre_productos}}</h4>
-          </div>
+          </div> -->
 
           
           <div class="form-group col-xl-8">
@@ -97,10 +75,6 @@
           <div class="form-group col-xl-12">
 
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-outline-info float-right" data-toggle="modal"
-              data-target="#modal{{mostrar.id}}">
-              Ver Mas!
-            </button>
 
             <!-- Modal -->
             <div class="modal fade" id="modal{{mostrar.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -108,7 +82,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Mas sobre el Producto!</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">¡Más sobre el Producto!</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -120,23 +94,12 @@
                       <div class="form-group ">
                         <img class="card-img-top img-thumbnail hijo" src="{{mostrar.imagen.url}}"
                           alt="Card image cap">
-                          <style>
-                            .padre{
-                              display: flex;
-                              align-items: center;
-                              justify-content: center;
-                            }
-                            .hijo{
-                              width: 100%;
-                              height: 100%;
-                            }
-                          </style>
                       </div>
 
 
                       <!-- Title -->
                       <div class="form-group col-xl-12 card-title">
-                        <h4 class="card-title"><strong>{{mostrar.id_nombre_producto.nombre_productos}}</strong></h4>
+                        <h5 class="card-title"><strong>{{mostrar.id_nombre_producto.nombre_productos}}</strong></h5>
                       </div>
                       
 
@@ -238,6 +201,10 @@
 
         </div>
 
+      </div>
+      <div class="card-footer text-center">
+        <button type="button" class="btn btn-outline-primary center" data-toggle="modal"
+        data-target="#modal{{mostrar.id}}"> ¡Ver Más!</button>
       </div>
 
     </div>
